upgrade to mgnl 6.4 (javax -> jakarta)